# cavity_detection

./: .gitattributes  .gitignore  CMakeLists.txt  README  README.md  nodes.bash  package.xml
cavity_detection/: CMakeLists.txt  package.xml  setup.py
cavity_detection/config/: topics.yaml
cavity_detection/include/logo_detector/: detector.h
cavity_detection/launch/: cavity_server.launch  detect_and_plot.launch  detectors.launch  horiz.launch  launch_planes.launch  map_tracker.launch  roi.launch  roi2.launch
cavity_detection/model/: nanodet.param
cavity_detection/scripts/: cavity_map_server.py  cavity_map_server_2.py  cavity_server.py  exploration.py  horizontal_roi.py  horizontal_roi_2.py  horizontal_roi_callback.py  horizontal_roi_pcd.py  map_loop.py  map_maker.py  map_tracker.py  ransac.py  replay.py  servoing.py  train.py  vertical_roi.py  vertical_roi_small.py  vertical_servo.py
cavity_detection/scripts/dump/: align_rgb_depth.py  basics.py  cavity_map.py  cavity_map_server.py  depth_rgb_2.py  depth_rgb_3.py  depth_rgb_4.py  depth_rgb_elsed.py  depth_rgb_fusion.py  edge_gradient.py  filling_model.py  horizontal_roi.py  horizontal_roi_callback.py  horizontal_roi_callback.py.save  horizontal_roi_pcd.py  markers.py  planar_lines.py  planes.py  planes_2.py  publish_planes.py  ros_depth_threads.py  sn2.py  sn3.py  surface_normals.py  testytest.py  tfs.py  vertical_2.py  vertical_roi_nodepth.py
cavity_detection/src/: map_maker.cpp  vertical_roi.cpp  vertical_servo.cpp
cavity_detection/src/cavity_detection/: cavity_structs.py  cavity_structs_2.py  helpers.py  map_wrapper.py  ransac.py  ray_casting.py  rviz.py
cavity_detection/src/logo_detector/: detector.cpp
cavity_detection_api/: CMakeLists.txt  package.xml
cavity_detection_api/include/cavity_detection_api/: api.h
cavity_detection_api/scripts/cavity_detection_api/: api.py  test_client.py
cavity_detection_api/src/cavity_detection_api/: api.cpp  test_client.cpp
cavity_detection_msgs/: CMakeLists.txt  package.xml  setup.py
cavity_detection_msgs/include/: api.h
cavity_detection_msgs/msg/: HorizontalObservation.msg  LogoObservation.msg  Roi.msg  RoiList.msg  RoiStamped.msg  VerticalObservation.msg
cavity_detection_msgs/scripts/cavity_detection_api/: api.py  test_client.py
cavity_detection_msgs/src/cavity_detection_api/: api.cpp  test_client.cpp
cavity_detection_msgs/srv/: AddCavity.srv  AddRoi.srv  GetNearestCavity.srv  GetNearestRoi.srv  GetRoiById.srv  MarkFilled.srv  MoveRoi.srv  SplitRoi.srv  UpdateCavity.srv  UpdateRoi.srv
launch/: detect_and_mark.launch
msg/: HorizRoi.msg  VertRoi.msg
scripts/: cavity_map.py  horizontal_roi.py  ransac.py  replay.py  replay2.py  vertical_roi.py
scripts/dump/: CavityArea.py  align.py  bagcsv.py  depth_rgb_1.py  depth_rgb_5.py  detect_cavities.ipynb  export_bags.py  newbag.py  offset_plane.py  pcl_helper.py  planar_lines_hard.py  plot_lines.py  plots.py  ros_depth.py  test.py  vertical.py
